# Sort_strings

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TO-DO:.md
.github/workflows/: ci.yml
include/: comparators.h  file_reader.h  sortings.h
src/: comparators.c  file_reader_api.c  file_reader_mmap.c  main.c  sort_strings.c  sortings.c
test/: 1.in  1_des_expected.out  input.txt
test/input/: 2.in
test/output/: 1.out  2.out
